--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.qaiser.test.LoginActivity"
-    android:background="#cdcbcb"
+    android:background="#e4e1e1"
     android:backgroundTintMode="screen">
 
     <!--  Header Starts-->
@@ -17,20 +17,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTintMode="screen"
-        android:id="@+id/imageView2"
-        android:layout_alignParentTop="true"
-        android:layout_toLeftOf="@+id/button2"
-        android:layout_toStartOf="@+id/button2" />
+        android:layout_centerHorizontal="true"
+        android:id="@+id/imageView2" />
 
     <ImageView android:src="@drawable/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTintMode="screen"
         android:id="@+id/imageView"
-        android:layout_alignBottom="@+id/imageView2"
-        android:layout_toRightOf="@+id/imageView2"
-        android:layout_toEndOf="@+id/imageView2"
-        android:layout_marginBottom="51dp" />
+        android:layout_below="@+id/imageView2"
+        android:layout_alignRight="@+id/textView4"
+        android:layout_alignEnd="@+id/textView4"
+        android:layout_alignLeft="@+id/textView4"
+        android:layout_alignStart="@+id/textView4" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -56,11 +55,8 @@
         android:layout_height="wrap_content"
         android:text="Login"
         android:id="@+id/button2"
-        android:textColor="#fdfdfd"
-        android:background="#767070"
         android:layout_below="@+id/editText3"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"/>
+        android:layout_centerHorizontal="true" />
 
 
 </RelativeLayout>
