--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -17,8 +17,7 @@
         android:backgroundTintMode="screen"
         android:id="@+id/imageView3"
         android:layout_alignParentTop="true"
-        android:layout_toLeftOf="@+id/button3"
-        android:layout_toStartOf="@+id/button3" />
+        android:layout_centerHorizontal="true" />
 
     <ImageView
         android:src="@drawable/text"
@@ -26,10 +25,11 @@
         android:layout_height="wrap_content"
         android:backgroundTintMode="screen"
         android:id="@+id/imageView4"
-        android:layout_alignTop="@+id/imageView3"
-        android:layout_toRightOf="@+id/imageView3"
-        android:layout_toEndOf="@+id/imageView3"
-        android:layout_marginTop="52dp" />
+        android:layout_below="@+id/imageView3"
+        android:layout_alignLeft="@+id/textView5"
+        android:layout_alignStart="@+id/textView5"
+        android:layout_alignRight="@+id/textView5"
+        android:layout_alignEnd="@+id/textView5" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -37,7 +37,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Set Your Security Key:"
         android:id="@+id/textView5"
-        android:layout_below="@+id/imageView3"
+        android:layout_below="@+id/imageView4"
         android:layout_centerHorizontal="true" />
 
     <EditText
@@ -55,9 +55,6 @@
         android:layout_height="wrap_content"
         android:text="Ok"
         android:id="@+id/button3"
-        android:background="#767070"
-        android:textColor="#ffffff"
         android:layout_below="@+id/editText4"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"/>
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
