--- a/app/src/main/res/layout/activity_viw_all.xml
+++ b/app/src/main/res/layout/activity_viw_all.xml
@@ -7,25 +7,21 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.qaiser.test.ViwAllActivity"
-    android:background="#cdcbcb">
+    tools:context="com.example.qaiser.test.ViwAllActivity">
 
 
     <ListView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:minHeight="?android:attr/listPreferredItemHeight"
+        android:layout_width="100dp"
+        android:layout_height="400dp"
         android:id="@+id/listView"
-        tools:listitem="@android:layout/simple_expandable_list_item_1"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="false"
-        android:layout_above="@+id/button4"
-        android:choiceMode="singleChoice"
-        android:divider="#777171"
-        android:background="#cdcbcb"
-        android:dividerHeight="3dp"
+        tools:listitem="@android:layout/simple_expandable_list_item_2"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_above="@+id/button4"
+        android:layout_alignParentTop="true"
+        android:choiceMode="multipleChoiceModal" />
 
     <Button
         android:layout_width="wrap_content"
@@ -33,9 +29,6 @@
         android:text="Update"
         android:id="@+id/button4"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:background="#767070"
-        android:textColor="#f7f5f5"
-        android:visibility="visible" />
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
